Fix spacing

--- a/components/WelcomeSection/Typewriter/Typewritter.module.scss
+++ b/components/WelcomeSection/Typewriter/Typewritter.module.scss
@@ -1,5 +1,5 @@
 .typewriter {
-  width: 285px;
+  width: 250px;
   div {
     display: table;
   }
